# examples-code-id-langchain-learning

./: .env  .env.example  .gitignore  ch01-id.md  ch02-id.md  ch03a-id.md  ch03b-id.md  ch04-id.md  ch05-id.md  ch06-id.md  ch06-insight.md  ch07-id.md  ch08-id.md  ch09-id.md  ch10-id.md  ch11-id.md  colophon01-id.md  colophon02-id.md  copyright-page01-id.md  cover-id.md  dedication01-id.md  ix01.md  package.json  pnpm-lock.yaml  preface01-glm-id.md  preface01-id.md  prompt-md.txt  prompt-translate-md.txt  pyproject.toml  tesla.html  tesla.md  test.txt  titlepage01-id.md
examples/ch01/: ch01-node.ipynb  ch01.ipynb
examples/ch02/: ch02.ipynb  ch02b.ipynb  ch02b.ipynb.bak  tesla.txt
examples/ch03/: Logical-Routing.ipynb  Semantic-Routing.ipynb
examples/ch04/: ch04-01.ipynb  ch04-02.ipynb  ch04-03.ipynb
examples/ch05/: ch05-00.ipynb  ch05-01.ipynb  ch05-02.ipynb
examples/ch06/: ch06-01.ipynb  ch06-02.ipynb
examples/ch07/: ch07-01.ipynb  ch07-02.ipynb  ch07-03.ipynb
src/ch01/: ch01.ts  chat-prompt-template.ts  chatModelBasic.ts  compositionBasic.ts  createChatModel.ts  init-llm.ts  main.ts  prompt-template.ts  promptTemplateBasic.ts  runableBasic.ts  structuredOutputBasic.ts
src/ch07/: ch07.ts  dump.js  esay.md  reflectBasic.ts
