[project]
name = "learning-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
# 1. UBAH PYTHON KE VERSI YANG LEBIH STABIL!
requires-python = "==3.11.13"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "langchain==0.2.17",
    "langchain-community>=0.2.0,<0.3.0",
    "langchain-openai>=0.1.0,<0.2.0",
    "langchain-postgres>=0.0.15,<0.1.0",
    "langchain-text-splitters>=0.2.0,<0.3.0",
    "pyzmq>=27.1.0",
]
